feat(store): added basic endpoint and permission layer store
